--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,12 +32,14 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <!-- android:largeHeap="true" -->
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyATUc_p6bgI7_PaInScBaiBYwxBCfvUSW4"/>
+            android:value="AIzaSyBFQoeNqkyFHJAgIWPykHN41CRBzVmUjY8"/>
     </application>
+
 </manifest>
